--- a/app/views/shared/_skip_links.html.erb
+++ b/app/views/shared/_skip_links.html.erb
@@ -1,1 +1,1 @@
-<div><a href="#maincontent" class="skip" data-turbolinks="false">Skip to main content</a></div>
+<div class="skip"><a href="#maincontent" data-turbolinks="false">Skip to main content</a></div>
