Resolves #1767: Enter search terms...

--- a/app/views/shared/_site_search.html.erb
+++ b/app/views/shared/_site_search.html.erb
@@ -1,17 +1,19 @@
 <% if params['controller'] == 'monograph_catalog' %>
   <% catalog_url = main_app.monograph_catalog_path(params[:id]) %>
+  <% search_label = t('monograph_catalog.search.form.q.label', monograph_name: @monograph_presenter.page_title) %>
 <% elsif params['controller'] == 'hyrax/file_sets' && !@presenter.nil? && @presenter.monograph.present? %>
   <% catalog_url = main_app.monograph_catalog_path(@presenter.monograph_id) %>
+  <% search_label = t('monograph_catalog.search.form.q.label', monograph_name: @presenter.monograph_presenter.page_title) %>
 <% else %>
   <% catalog_url = main_app.search_catalog_path %>
+  <% search_label = t('hyrax.search.form.q.label', application_name: application_name) %>
 <% end %>
 
 <%= form_tag catalog_url, method: :get, class: "search-form navbar-left navbar-form" do %>
   <fieldset>
-    <legend class="sr-only">Search <%= application_name %></legend>
     <%= render_hash_as_hidden_fields(search_state.params_for_search.except(:q, :search_field, :qt, :page, :utf8, :partial)) %>
     <div class="input-group">
-      <%= label_tag :catalog_search, t('hyrax.search.form.q.label'), class: "sr-only" %>
+      <%= label_tag :catalog_search, search_label, class: "sr-only" %>
       <%= text_field_tag(:q, params[:q], class: "q search-query form-control", id: "catalog_search",
                          placeholder: t('hyrax.search.form.q.placeholder'), tabindex: "0", type: "search") %>
       <div class="input-group-btn">
