--- a/app/views/press_catalog/_press_search.html.erb
+++ b/app/views/press_catalog/_press_search.html.erb
@@ -1,15 +1,10 @@
 <%= form_tag main_app.press_catalog_path(@press), method: :get, class: "search-form navbar-left navbar-form" do %>
   <fieldset>
-    <% search_label = t('press_catalog.search_form.q.label', press_name: @press.name) %>
-    <legend class="sr-only"><%= search_label %></legend>
-    <%= label_tag :catalog_search, search_label, class: "sr-only" %>
-
     <%= render_hash_as_hidden_fields(search_state.params_for_search.except(:q, :search_field, :qt, :page, :utf8)) %>
-
     <div class="input-group">
+      <%= label_tag :catalog_search, t('press_catalog.search.form.q.label', press_name: @press.name), class: "sr-only" %>
       <%= text_field_tag(:q, params[:q], class: "q search-query form-control", id: "catalog_search",
                          placeholder: t('hyrax.search.form.q.placeholder'), tabindex: "0", type: "search") %>
-
       <div class="input-group-btn">
         <button type="submit" class="search-submit btn btn-primary" id="keyword-search-submit" tabindex="0">
           <i class="glyphicon glyphicon-search"></i><span class="sr-only">Search</span>
