initial pass at accessible tabs, fix the markup, move all the inline JS on the monograph catalog view to its own file

--- a/app/assets/stylesheets/application/heliotrope.scss
+++ b/app/assets/stylesheets/application/heliotrope.scss
@@ -3,7 +3,19 @@
 // Place standard styling of app here
 // Press related overrides go in themes.scss
 ///////////////////////////////////////////
-
+///////////////////////////////////
+// UTILITY
+///////////////////////////////////
+.u-screenreader {
+  clip: rect(1px, 1px, 1px, 1px);
+  position: absolute !important;
+  height: 1px;
+  width: 1px;
+  overflow: hidden;
+}
+.u-screenreader--ignore {
+  speak: none;
+}
 ///////////////////////////////////
 // COLORS
 ///////////////////////////////////
