--- a/app/views/institutions/edit.html.erb
+++ b/app/views/institutions/edit.html.erb
@@ -1,6 +1,15 @@
-<h1>Editing Institution</h1>
-
-<%= render 'form', institution: @institution %>
-
-<%= link_to 'Show', @institution %> |
-<%= link_to 'Back', institutions_path %>
+<div id="maincontent">
+  <div class="row">
+    <div class="col-md-12"><h1>Editing Institution</h1></div>
+    <div class="col-md-12">
+      <%= render 'form', institution: @institution %>
+    </div>
+    <div class="col-md-12"><br/></div>
+    <div class="col-md-12">
+      <%= link_to 'Show', @institution %>
+      <span> | </span>
+      <%= link_to 'Back', institutions_path %>
+    </div>
+    <div class="col-md-12"><br/></div>
+  </div>
+</div>
