--- a/app/views/institutions/help.html.erb
+++ b/app/views/institutions/help.html.erb
@@ -1,8 +1,8 @@
 <h1>Institution Help</h1>
 
 <p>
-  <strong>Key:</strong>
-  <%= @institution.key %>
+  <strong>Identifier:</strong>
+  <%= @institution.identifier %>
 </p>
 
 <p>
