--- a/app/views/products/_lessees.html.erb
+++ b/app/views/products/_lessees.html.erb
@@ -1,18 +1,34 @@
-<ul>
+<div class="row">
   <% lessees.each do |lessee| %>
-    <li><%= lessee.identifier %> <%= link_to(product_lessee_path(product, lessee), method: :delete, class: "btn btn-default") do %>
+    <div class="col-md-1">
+      <% if lessee.grouping? %>
+        <span class="glyphicon glyphicon-duplicate" aria-hidden="true"></span>
+      <% elsif lessee.institution? %>
+        <span class="glyphicon glyphicon-registration-mark" aria-hidden="true"></span>
+      <% end %>
+    </div>
+    <div class="col-md-5">
+      <% if lessee.institution? %>
+        <%= lessee.institution.name %>
+      <% else %>
+        <%= lessee.identifier %>
+      <% end %>
+    </div>
+    <div class="col-md-6">
+      <%= link_to(product_lessee_path(product, lessee), method: :delete, class: "btn btn-default") do %>
         <span class="glyphicon glyphicon-minus" aria-hidden="true"></span> Remove
       <% end %>
-    </li>
+    </div>
   <% end %>
   <% if product.not_lessees.present? %>
-    <li>
-      <%= form_tag(product_lessees_path(product), method: :post) do %>
-        <%= select_tag "id", options_from_collection_for_select(product.not_lessees, "id", "identifier") %>
-        <%= button_tag(type: 'submit',  class: 'btn btn-default') do %>
+    <%= form_tag(product_lessees_path(product), method: :post) do %>
+      <div class="col-md-1"></div>
+      <div class="col-md-5"><%= select_tag "id", options_from_collection_for_select(product.not_lessees, "id", "identifier") %></div>
+      <div class="col-md-6">
+        <%= button_tag(type: 'submit', class: 'btn btn-default') do %>
           <span class="glyphicon glyphicon-plus" aria-hidden="true"></span> Add
         <% end %>
-      <% end %>
-    </li>
+      </div>
+    <% end %>
   <% end %>
-</ul>
+</div>
