--- a/app/views/products/edit.html.erb
+++ b/app/views/products/edit.html.erb
@@ -1,6 +1,15 @@
-<h1>Editing Product</h1>
-
-<%= render 'form', product: @product %>
-
-<%= link_to 'Show', @product %> |
-<%= link_to 'Back', products_path %>
+<div id="maincontent">
+  <div class="row">
+    <div class="col-md-12"><h1>Editing Product</h1></div>
+    <div class="col-md-12">
+      <%= render 'form', product: @product %>
+    </div>
+    <div class="col-md-12"><br/></div>
+    <div class="col-md-12">
+      <%= link_to 'Show', @product %>
+      <span> | </span>
+      <%= link_to 'Back', products_path %>
+    </div>
+    <div class="col-md-12"><br/></div>
+  </div>
+</div>
