--- a/app/views/components/new.html.erb
+++ b/app/views/components/new.html.erb
@@ -1,5 +1,11 @@
-<h1>New Component</h1>
-
-<%= render 'form', component: @component %>
-
-<%= link_to 'Back', components_path %>
+<div id="maincontent">
+  <div class="row">
+    <div class="col-md-12"><h1>New Component</h1></div>
+    <div class="col-md-12">
+      <%= render 'form', component: @component %>
+    </div>
+    <div class="col-md-12"><br/></div>
+    <div class="col-md-12"><%= link_to 'Back', components_path %></div>
+    <div class="col-md-12"><br/></div>
+  </div>
+</div>
