--- a/app/views/fulcrum/_products.html.erb
+++ b/app/views/fulcrum/_products.html.erb
@@ -1,8 +1,7 @@
 <% products =  Product.all %>
-<h1>Products Summary</h1>
+<h1>Products</h1>
 <table class="table table-striped" summary="Product List">
   <tr>
-    <th></th>
     <th>Product <%= link_to(new_product_path) do %>
         <span class="glyphicon glyphicon-plus" aria-hidden="true"></span> New
       <% end %>
@@ -12,10 +11,6 @@
   </tr>
   <% products.each do |product| %>
     <tr>
-      <td><%= link_to(edit_product_path(product)) do %>
-          <span class="glyphicon glyphicon-edit" aria-hidden="true"></span> Edit
-        <% end %>
-      </td>
       <td><%= link_to product.identifier, product_path(product) %></td>
       <td><%= product.components.count() %></td>
       <td><%= product.lessees.count() %></td>
