--- a/app/views/institutions/_form.html.erb
+++ b/app/views/institutions/_form.html.erb
@@ -2,7 +2,7 @@
   <%= f.error_notification %>
 
   <div class="form-inputs">
-    <%= f.input :key %>
+    <%= f.input :identifier %>
     <%= f.input :name %>
     <%= f.input :site %>
     <%= f.input :login %>
