--- a/app/views/institutions/show.html.erb
+++ b/app/views/institutions/show.html.erb
@@ -1,24 +1,26 @@
 <p id="notice"><%= notice %></p>
-
-<p>
-  <strong>Key:</strong>
-  <%= @institution.key %>
-</p>
-
-<p>
-  <strong>Name:</strong>
-  <%= @institution.name %>
-</p>
-
-<p>
-  <strong>Site:</strong>
-  <%= @institution.site %>
-</p>
-
-<p>
-  <strong>Login:</strong>
-  <%= @institution.login %>
-</p>
-
-<%= link_to 'Edit', edit_institution_path(@institution) %> |
-<%= link_to 'Back', institutions_path %>
+<div id="maincontent">
+  <div class="row">
+    <div class="col-md-12"><h1>Institution</h1></div>
+    <div class="col-md-1"><em>Identifier</em></div>
+    <div class="col-md-11"><%= @institution.identifier %></div>
+    <div class="col-md-1"><em>Name</em></div>
+    <div class="col-md-11"><%= @institution.name %></div>
+    <div class="col-md-1"><em>Site</em></div>
+    <div class="col-md-11"><%= @institution.site %></div>
+    <div class="col-md-1"><em>Login</em></div>
+    <div class="col-md-11"><%= @institution.login %></div>
+    <% if @institution.lessee? %>
+      <div class="col-md-12"><h2>Lessee</h2></div>
+      <div class="col-md-1"></div>
+      <div class="col-md-11"><%= link_to @institution.lessee.identifier, lessee_path(@institution.lessee) %></div>
+    <% end %>
+    <div class="col-md-12"><br/></div>
+    <div class="col-md-12">
+      <%= link_to 'Edit', edit_institution_path(@institution) %>
+      <span> | </span>
+      <%= link_to 'Back', institutions_path %>
+    </div>
+    <div class="col-md-12"><br/></div>
+  </div>
+</div>
