--- a/app/views/lessees/_products.html.erb
+++ b/app/views/lessees/_products.html.erb
@@ -1,18 +1,22 @@
-<ul>
+<div class="row">
   <% products.each do |product| %>
-    <li><%= product.identifier %> <%= link_to(lessee_product_path(lessee, product), method: :delete, class: "btn btn-default") do %>
+    <div class="col-md-1"></div>
+    <div class="col-md-5"><%= product.identifier %></div>
+    <div class="col-md-6">
+      <%= link_to(lessee_product_path(lessee, product), method: :delete, class: "btn btn-default") do %>
         <span class="glyphicon glyphicon-minus" aria-hidden="true"></span> Remove
       <% end %>
-    </li>
+    </div>
   <% end %>
   <% if lessee.not_products.present? %>
-    <li>
-      <%= form_tag(lessee_products_path(lessee), method: :post) do %>
-        <%= select_tag "id", options_from_collection_for_select(lessee.not_products, "id", "identifier") %>
-        <%= button_tag(type: 'submit',  class: 'btn btn-default') do %>
+    <%= form_tag(lessee_products_path(lessee), method: "post") do %>
+      <div class="col-md-1"></div>
+      <div class="col-md-5"><%= select_tag "id", options_from_collection_for_select(lessee.not_products, "id", "identifier") %></div>
+      <div class="col-md-6">
+        <%= button_tag(type: 'submit', class: 'btn btn-default') do %>
           <span class="glyphicon glyphicon-plus" aria-hidden="true"></span> Add
         <% end %>
-      <% end %>
-    </li>
+      </div>
+    <% end %>
   <% end %>
-</ul>
+</div>
