--- a/app/views/products/_components.html.erb
+++ b/app/views/products/_components.html.erb
@@ -1,18 +1,22 @@
-<ul>
+<div class="row">
   <% components.each do |component| %>
-    <li><%= component.handle %> <%= link_to(product_component_path(product, component), method: :delete, class: "btn btn-default") do %>
+    <div class="col-md-1"></div>
+    <div class="col-md-5"><%= link_to component.handle, HandleService.url(HandleService.object(component.handle)) %></div>
+    <div class="col-md-6">
+      <%= link_to(product_component_path(product, component), method: :delete, class: "btn btn-default") do %>
         <span class="glyphicon glyphicon-minus" aria-hidden="true"></span> Remove
       <% end %>
-    </li>
+    </div>
   <% end %>
   <% if product.not_components.present? %>
-    <li>
-      <%= form_tag(product_components_path(product), method: "post") do %>
-        <%= select_tag "id", options_from_collection_for_select(product.not_components, "id", "handle") %>
-        <%= button_tag(type: 'submit',  class: 'btn btn-default') do %>
+    <%= form_tag(product_components_path(product), method: "post") do %>
+      <div class="col-md-1"></div>
+      <div class="col-md-5"><%= select_tag "id", options_from_collection_for_select(product.not_components, "id", "handle") %></div>
+      <div class="col-md-6">
+        <%= button_tag(type: 'submit', class: 'btn btn-default') do %>
           <span class="glyphicon glyphicon-plus" aria-hidden="true"></span> Add
         <% end %>
-      <% end %>
-    </li>
+      </div>
+    <% end %>
   <% end %>
-</ul>
+</div>
