--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,29 +1,20 @@
 <p id="notice"><%= notice %></p>
-
-<h1>Products</h1>
-
-<table class="table table-striped">
-  <thead>
-    <tr>
-      <th>Identifier</th>
-      <th>Purchase</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @products.each do |product| %>
-      <tr>
-        <td><%= product.identifier %></td>
-        <td><%= product.purchase %></td>
-        <td><%= link_to 'Show', product %></td>
-        <td><%= link_to 'Edit', edit_product_path(product) %></td>
-        <td><%= link_to 'Destroy', product, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
-
-<br>
-
-<%= link_to 'New Product', new_product_path %>
+<div id="maincontent">
+  <div class="row">
+    <div class="col-md-12"><h1>Products</h1></div>
+    <div class="col-md-12">
+      <% @products.each do |product| %>
+        <div class="col-md-1"></div>
+        <div class="col-md-5"><%= product.identifier %></div>
+        <div class="col-md-6">
+          <div class="col-md-4"><%= link_to 'Show', product %></div>
+          <div class="col-md-4"><%= link_to 'Edit', edit_product_path(product) %></div>
+          <div class="col-md-4"><%= link_to 'Destroy', product, method: :delete, data: { confirm: 'Are you sure?' } %></div>
+        </div>
+      <% end %>
+    </div>
+    <div class="col-md-12"><br/></div>
+    <div class="col-md-12"><%= link_to 'New Product', new_product_path %></div>
+    <div class="col-md-12"><br/></div>
+  </div>
+</div>
