--- a/app/views/e_pubs/show.html.erb
+++ b/app/views/e_pubs/show.html.erb
@@ -61,7 +61,7 @@ webgl = FactoryService.webgl_unity(webgl_id)
         <% if %w[heb nyupress gabii].include? @subdomain %>
         cozy.control.widget.panel({
           region: 'top.header.left',
-          template: '<div class="logo"><%= image_tag logo(@subdomain), alt: @subdomain %>',
+          template: '<div class="logo"><%= link_to (image_tag logo(@subdomain), role: 'link', alt: @subdomain + ' catalog on Fulcrum'), URI.join(main_app.root_url, @subdomain).to_s %>',
           data: { title: "<%= @subdomain %>" }
         }).addTo(reader);
         <% end %>
