--- a/app/views/embed/show.html.erb
+++ b/app/views/embed/show.html.erb
@@ -1,3 +1,4 @@
+<% provide :page_title, @presenter.page_title %>
 <% provide :body do %>
   <%= render "hyrax/file_sets/media_embedded", presenter: @presenter %>
 <% end %>
