--- a/fulcrum/_sass/custom.scss
+++ b/fulcrum/_sass/custom.scss
@@ -99,21 +99,45 @@ p {
 .partners {
   img {
     width: 100%;
+    filter: grayscale(100%);
+  }
+
+  img:hover {
+    filter: grayscale(0%);
+  }
+
+  img.square {
+    max-width: 150px;
+  }
+
+  img.vertical {
+    max-height: 245px;
+    width: auto;
   }
 
   a {
     display: block;
+    text-align: center;
   }
 
-  a:hover {
-    border-bottom: 0 solid transparent;
+  a:hover, a:active {
+    border-bottom: 3px solid transparent;
   }
 }
 
+hr.brand {
+  content: '';
+  display: block;
+  width: 100%;
+  height: 5px;
+  position: relative;
+  bottom: 5px;
+  background: #002C63;
+  background-image: linear-gradient(-113deg, #002C63 0%, #00AFEC 100%);
+}
 
 // case studies
 .case-study {
-  padding-top: 5rem;
   padding-bottom: 4rem;
 
   .row {
